feat: 重构地图遇怪系统 — 密集度替代旧遇怪表，子事件效果引擎，子事件调节悬赏奖励
- MapNode: 用 encounter_richness 替代旧 MonsterEncounterEntry，控制遇怪/事件频率
- EncounterCalculator: 根据地图密集度、等级匹配度动态计算触发间隔和概率
- 新增 SubEventEffect 效果处理器体系 (12 种效果类型)，统一 TRAVEL/TRAINING/BOUNTY_SIDE
- 新增 TriggerConditionChecker (HAS_SKILL/HAS_ITEM/STAT_THRESHOLD 等条件检查)
- 悬赏结算受子事件效果调节 (MultiplyBountyReward 等)
- TrainingCombatLogic 删除，合并到 CombatService/TrainingService
- 新增 CombatEventHandler、CombatSummary、EncounterResult

fix: 修复审查发现的 5 项 bug:
- V1.0.1/V1.0.25 Flyway 迁移 SQL 缺少闭合括号
- V1.0.31 第 2/3 批 INSERT 使用已删除的 monster_encounters 列名
- BountyCompleter 向 effectExecutor 传入 null User (潜在 NPE)