@@ -2,11 +2,13 @@ package top.stillmisty.xiantao.service.map;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import top.stillmisty.xiantao.domain.event.entity.ActivityEvent;
+import top.stillmisty.xiantao.domain.event.repository.ActivityEventRepository;
 import top.stillmisty.xiantao.domain.map.entity.MapNode;
-import top.stillmisty.xiantao.domain.map.entity.MonsterEncounterEntry;
 import top.stillmisty.xiantao.domain.map.repository.MapNodeRepository;
 import top.stillmisty.xiantao.domain.map.vo.MapInfoVO;
 import top.stillmisty.xiantao.domain.monster.entity.MonsterTemplate;
@@ -29,6 +31,7 @@ public class MapService {
   private final MapNodeRepository mapNodeRepository;
   private final MonsterTemplateRepository monsterTemplateRepository;
   private final UserStateService userStateService;
+  private final ActivityEventRepository activityEventRepository;
 
   // ===================== 公开 API（含认证） =====================
 
@@ -48,7 +51,17 @@ public class MapService {
 
   /** 获取所有地图 */
   public List<MapInfoVO> getAllMaps() {
-    return mapNodeRepository.findAll().stream().map(this::convertToMapInfoVO).toList();
+    var maps = mapNodeRepository.findAll();
+    List<Long> mapIds = maps.stream().map(MapNode::getId).toList();
+    Map<Long, List<ActivityEvent>> combatEventsByMap =
+        activityEventRepository.findByOwnerIdsAndType("TRAINING", mapIds, "COMBAT");
+    Map<Long, MonsterTemplate> templateMap = buildMonsterTemplateMap(combatEventsByMap);
+    return maps.stream()
+        .map(
+            m ->
+                convertToMapInfoVO(
+                    m, combatEventsByMap.getOrDefault(m.getId(), List.of()), templateMap))
+        .toList();
   }
 
   /** 获取当前所在地图详情 */
@@ -58,20 +71,23 @@ public class MapService {
         mapNodeRepository
             .findById(user.getLocationId())
             .orElseThrow(() -> new BusinessException(ErrorCode.MAP_CURRENT_NOT_FOUND));
-    return convertToMapInfoVO(mapNode);
+    List<ActivityEvent> combatEvents =
+        activityEventRepository.findByType("TRAINING", mapNode.getId(), "COMBAT");
+    Map<Long, MonsterTemplate> templateMap =
+        buildMonsterTemplateMap(Map.of(mapNode.getId(), combatEvents));
+    return convertToMapInfoVO(mapNode, combatEvents, templateMap);
   }
 
   /** 根据地图ID获取地图名称 */
   public String getMapName(Long mapId) {
-    if (mapId == null) {
-      return "未知";
-    }
+    if (mapId == null) return "未知";
     return mapNodeRepository.findById(mapId).map(MapNode::getName).orElse("未知");
   }
 
   /** 转换为地图信息 VO */
-  private MapInfoVO convertToMapInfoVO(MapNode mapNode) {
-    List<MapInfoVO.MonsterInfoVO> monsters = buildMonsterInfoList(mapNode.getMonsterEncounters());
+  private MapInfoVO convertToMapInfoVO(
+      MapNode mapNode, List<ActivityEvent> combatEvents, Map<Long, MonsterTemplate> templateMap) {
+    List<MapInfoVO.MonsterInfoVO> monsters = buildMonsterInfoList(combatEvents, templateMap);
 
     var neighbors = mapNode.getNeighbors();
     List<String> adjacentMapNames;
@@ -98,33 +114,47 @@ public class MapService {
         .build();
   }
 
-  /** 根据遇怪池构建怪物信息列表 */
-  private List<MapInfoVO.MonsterInfoVO> buildMonsterInfoList(
-      List<MonsterEncounterEntry> monsterEncounters) {
-    if (monsterEncounters == null || monsterEncounters.isEmpty()) {
-      return List.of();
-    }
+  private Map<Long, MonsterTemplate> buildMonsterTemplateMap(
+      Map<Long, List<ActivityEvent>> combatEventsByMap) {
     List<Long> templateIds =
-        monsterEncounters.stream().map(MonsterEncounterEntry::templateId).toList();
-    Map<Long, MonsterTemplate> templateMap =
-        monsterTemplateRepository.findByIds(templateIds).stream()
-            .collect(java.util.stream.Collectors.toMap(MonsterTemplate::getId, t -> t));
+        combatEventsByMap.values().stream()
+            .flatMap(List::stream)
+            .filter(e -> e.getParams() != null && e.getParams().containsKey("monster_template_id"))
+            .map(e -> ((Number) e.getParams().get("monster_template_id")).longValue())
+            .distinct()
+            .collect(Collectors.toList());
+    if (templateIds.isEmpty()) return Map.of();
+    return monsterTemplateRepository.findByIds(templateIds).stream()
+        .collect(Collectors.toMap(MonsterTemplate::getId, t -> t));
+  }
 
-    return monsterEncounters.stream()
+  /** 根据 COMBAT 事件构建怪物信息列表 */
+  private List<MapInfoVO.MonsterInfoVO> buildMonsterInfoList(
+      List<ActivityEvent> combatEvents, Map<Long, MonsterTemplate> templateMap) {
+    if (combatEvents.isEmpty()) return List.of();
+    return combatEvents.stream()
         .map(
-            entry -> {
-              MonsterTemplate template = templateMap.get(entry.templateId());
+            event -> {
+              Map<String, Object> params = event.getParams();
+              long templateId = ((Number) params.get("monster_template_id")).longValue();
+              MonsterTemplate template = templateMap.get(templateId);
               return MapInfoVO.MonsterInfoVO.builder()
-                  .templateId(entry.templateId())
+                  .templateId(templateId)
                   .name(template != null ? template.getName() : "未知怪物")
                   .typeName(
                       template != null && template.getMonsterType() != null
                           ? template.getMonsterType().getName()
                           : "未知")
                   .baseLevel(template != null ? template.getBaseLevel() : null)
-                  .weight(entry.weight())
-                  .minCount(entry.min())
-                  .maxCount(entry.max())
+                  .weight(event.getWeight())
+                  .minCount(
+                      params.containsKey("min_count")
+                          ? ((Number) params.get("min_count")).intValue()
+                          : 1)
+                  .maxCount(
+                      params.containsKey("max_count")
+                          ? ((Number) params.get("max_count")).intValue()
+                          : 1)
                   .build();
             })
         .sorted((a, b) -> Integer.compare(b.getWeight(), a.getWeight()))
